--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <svg viewBox="0 0 100 100" preserveAspectRatio=none >
-        <path d="M 0 0 L 20 20 L 20 20" stroke=black fill=none path />
+        <path d="M 0 10 L 20 20 L 40 10 L 60 20 L 80 10 L 100 20 " stroke=black fill=none path />
     </svg>
 
 
